--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "ip": "^2.0.1",
     "isolated-vm": "^4.7.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "undici": "^6.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/ip": "^1.1.3",
+    "@types/netmask": "^2.0.5"
   }
 }
