--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "ip": "^2.0.1",
     "isolated-vm": "^4.7.2",
     "typescript": "^5.4.5",
-    "undici": "^6.18.2"
+    "undici": "^6.18.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/ip": "^1.1.3",
-    "@types/netmask": "^2.0.5"
+    "@types/netmask": "^2.0.5",
+    "@types/ws": "^8.5.12"
   }
 }
