--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "RyanPotat",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "express": "^4.19.2",
     "ip": "^2.0.1",
     "isolated-vm": "^4.7.2",
+    "moment-timezone": "^0.5.46",
     "typescript": "^5.4.5",
     "undici": "^6.18.2",
+    "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
