--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "eval-server",
+  "type": "module",
   "version": "1.0.0",
   "description": "simple server to run a vm for javascript evaluation",
   "main": "index.js",
   "scripts": {
-    "start": "docker-compose up -d && tsc && node index.js",
+    "start": "docker-compose up -d && tsc && tsc-alias && node ./dist/index.js",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "build": "tsc"
   },
   "author": "RyanPotat",
@@ -16,15 +19,20 @@
     "ip": "^2.0.1",
     "isolated-vm": "^6.0.0",
     "moment-timezone": "^0.5.46",
-    "typescript": "^5.4.5",
     "undici": "^6.18.2",
     "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@types/express": "^4.17.21",
     "@types/ip": "^1.1.3",
     "@types/netmask": "^2.0.5",
-    "@types/ws": "^8.5.12"
+    "@types/ws": "^8.5.12",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
+    "tsc-alias": "^1.8.16",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1"
   }
 }
